--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -72,7 +72,7 @@
 
     <div class="pagination">
         <span class="items-per-page">
-            Showing
+            <p>Showing</p>
             <select (change)="changeItemsPerPage($event)">
                 <option [value]="5">5</option>
                 <option [value]="10" selected>10</option>
@@ -81,7 +81,7 @@
                 <option [value]="25">25</option>
                 <option [value]="30">30</option>
             </select>
-            items
+            <p>items</p>
         </span>
         <div class="page-controls">
             <button class="page-btn fal fa-chevron-left" [disabled]="currentPage === 1" (click)="changePage(currentPage - 1)"></button>
