--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -15,6 +15,7 @@ $amazon-blue: #146EB4;
     .logo-container {
         display: flex;
         align-items: center;
+        justify-content: center;
         padding: 0.938rem;
         width: 100%;
         margin-bottom: 1.5rem;
@@ -22,7 +23,7 @@ $amazon-blue: #146EB4;
         .logo {
             background: $amazon-yellow;  // Amazon Yellow for the logo button
             text-align: center;
-            width: 3rem;
+            width: 4rem;
             min-width: 3rem;
             border-radius: 0.313rem;
             padding: 0.313rem;
