--- a/src/app/items/items.component.scss
+++ b/src/app/items/items.component.scss
@@ -116,6 +116,11 @@ $amazon-blue: #146EB4;
                 font-weight: 500;
                 margin: 0;
             }
+
+            .suggestion {
+                font-size: 14px;
+                color: #666;
+            }
         }
 
         table {
