--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -7,7 +7,7 @@
     <div class="actions-bar">
         <div class="search-container">
             <i class="fal fa-search search-icon"></i>
-            <input type="text" placeholder="Search Item" class="search-input" (input)="onSearch($event)">
+            <input type="text" placeholder="Search Item" class="search-input">
         </div>
 
         <div class="button-group">
@@ -21,7 +21,7 @@
     </div>
 
     <div class="table-container">
-        <table *ngIf="!isLoadingInventories && paginatedInventories.length > 0" matSort
+        <table *ngIf="!(isLoading$ | async) && inventories$" matSort
             (matSortChange)="onSort($event)">
             <thead>
                 <tr>
@@ -69,7 +69,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let inventory of paginatedInventories">
+                <tr *ngFor="let inventory of inventories$ | async">
                     <td>{{ inventory.id }}</td>
                     <td>{{ inventory.brand_name }}</td>
                     <td>{{ inventory.type }}</td>
@@ -90,7 +90,7 @@
             </tbody>
         </table>
 
-        <div class="pagination">
+        <!-- <div class="pagination">
             <span class="items-per-page">
                 <p>Showing</p>
                 <select (change)="changeItemsPerPage($event)">
@@ -113,15 +113,15 @@
                   [disabled]="currentPage === math.ceil(totalItems / itemsPerPage)"
                   (click)="changePage(currentPage + 1)"></button>
               </div>
-        </div>
+        </div> -->
 
-        <div *ngIf="!isLoadingInventories && paginatedInventories.length === 0" class="no-items-message">
+        <div *ngIf="!(isLoading$ | async) && !inventories$" class="no-items-message">
             <i class="fal fa-dolly-empty"></i>
             <p>No inventories found.</p>
             <span class="suggestion">Try adding an item.</span>
         </div>
 
-        <div *ngIf="isLoadingInventories" class="loading-inventories">
+        <div *ngIf="isLoading$ | async" class="loading-inventories">
             <i class="fal fa-spinner"></i>
             <p>Loading all inventories from database.</p>
         </div>
